# denorm-etl.rs

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  layer_publish.sh
src/: asyncs.rs  factory.rs  main.rs  memchr_test.rs  pipeline.rs  pipeline_factory.rs  plugins.rs  regex_testing.rs
src/pipeline/: consumer.rs  producer.rs  transformer.rs
src/plugins/: disk_consumer.rs  jira.rs  jira_cleaned.rs  jira_producer.rs  s3.rs  s3_consumer.rs  text_proc.rs
templates/: plain_ticket.templ.txt
